template and author setup is done

--- a/project-report/contents/abstract.tex
+++ b/project-report/contents/abstract.tex
@@ -1,4 +1,4 @@
 %!TEX root=../main.tex
 \begin{abstract}
-	abstract
+In this project, our goal was to predict arrival status of a flight based on the available data. 
 \end{abstract}
