--- a/project-report/main.tex
+++ b/project-report/main.tex
@@ -63,7 +63,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{\sysname: On Vetting IoT Defenses Enforcing Policies at Runtime} %\vspace*{-1em}}
+\title{On Predicting Flight Arrival Status with Tree-Based Machine Learning \vspace*{-1em}}
 
 
 % author names and affiliations
@@ -115,9 +115,9 @@
 % 
 \author{
 \IEEEauthorblockN{Akib Jawad Nafis\IEEEauthorrefmark{1},
-Omar Chowdhury\IEEEauthorrefmark{2}, and Endadul Hoque\IEEEauthorrefmark{1}}
-\IEEEauthorblockA{\IEEEauthorrefmark{1}Syracuse University, NY USA} %Email: see http://www.michaelshell.org/contact.html}
-\IEEEauthorblockA{\IEEEauthorrefmark{2}Stony Brook University, NY USA}
+Uddesh Shyam Kshirsagar\IEEEauthorrefmark{1}, Rishitha Vanamala\IEEEauthorrefmark{1}, and Arya Pathrikar\IEEEauthorrefmark{1}}\\
+\IEEEauthorblockA{\IEEEauthorrefmark{1}Syracuse University, New York, USA} %Email: see http://www.michaelshell.org/contact.html}
+%\IEEEauthorblockA{\IEEEauthorrefmark{2}Stony Brook University, NY USA}
 %Email: homer@thesimpsons.com}
 %\IEEEauthorblockA{\IEEEauthorrefmark{3}Starfleet Academy, San Francisco, California 96678-2391\\
 %Telephone: (800) 555--1212, Fax: (888) 555--1212}
@@ -410,10 +410,10 @@ Omar Chowdhury\IEEEauthorrefmark{2}, and Endadul Hoque\IEEEauthorrefmark{1}}
 % http://www.ctan.org/tex-archive/biblio/bibtex/contrib/doc/
 % The IEEEtran BibTeX style support page is at:
 % http://www.michaelshell.org/tex/ieeetran/bibtex/
-\bibliographystyle{IEEEtran}
+%\bibliographystyle{IEEEtran}
 %\bibliographystyle{ACM-Reference-Format}
 % argument is your BibTeX string definitions and bibliography database(s)
-\bibliography{refS}
+%\bibliography{refS}
 %
 % <OR> manually copy in the resultant .bbl file
 % set second argument of \begin to the number of references
