--- a/project-report/main.tex
+++ b/project-report/main.tex
@@ -148,7 +148,7 @@ Uddesh Shyam Kshirsagar\IEEEauthorrefmark{1}, Rishitha Vanamala\IEEEauthorrefmar
 \maketitle
 \input{contents/abstract}
 \begin{IEEEkeywords}
-	Keywords
+	Flight Arrival Status Prediction, XGBoost
 \end{IEEEkeywords}
 %\keywords{empty keyword}
 
