done with problem description

--- a/project-report/contents/design.tex
+++ b/project-report/contents/design.tex
@@ -1,7 +1,9 @@
 %!TEX root=../main.tex
 
-\section{Design and Workflow}
-\label{sec:design}
+\section{Proposed Solution}
+\label{sec:solution}
+
+From the problem description, we can understand we need to 
 
 %
 %\begin{figure}[!t]
