--- a/project-report/main.tex
+++ b/project-report/main.tex
@@ -153,7 +153,7 @@ Uddesh Shyam Kshirsagar\IEEEauthorrefmark{1}, Rishitha Vanamala\IEEEauthorrefmar
 %\keywords{empty keyword}
 
 \input{contents/introduction}
-\input{contents/preliminaries}
+%\input{contents/preliminaries}
 \input{contents/problem}
 \input{contents/design}
 \input{contents/implementation}
